--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <button id="checkInBtn" class="btn btn-primary">
                 ✓ Marcar Día Completado
             </button>
+            <button id="refreshBtn" class="btn btn-info">
+                🔄 Actualizar Datos
+            </button>
             <button id="resetBtn" class="btn btn-secondary">
                 ↻ Reiniciar Racha
             </button>
@@ -63,6 +66,6 @@
         <span id="notificationText"></span>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
