Add: Sistema seguro de configuracion con prompts

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <button id="resetBtn" class="btn btn-secondary">
                 ↻ Reiniciar Racha
             </button>
+            <button id="configBtn" class="btn btn-config">
+                ⚙️ Configurar
+            </button>
         </div>
 
         <div class="last-update">
