Improve: Sincronizacion rapida cada 5 segundos con indicador visual

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="container">
         <h1>🔥 Contador de Rachas 🔥</h1>
+        <div class="sync-indicator" id="syncIndicator">
+            <span class="sync-dot"></span>
+            <span id="syncText">Sincronizado</span>
+        </div>
         
         <div class="stats-container">
             <div class="stat-box">
