Add: Mostrar Gist ID y mejorar configuracion inicial

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <span class="sync-dot"></span>
             <span id="syncText">Sincronizado</span>
         </div>
+        <div class="gist-info" id="gistInfo">
+            <small>Gist ID: <code id="gistIdDisplay">--</code></small>
+        </div>
         
         <div class="stats-container">
             <div class="stat-box">
